# hyperbolic-ricci-flow

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
data/: amphora.canonical.m  amphora.m  genus2.canonical.m  genus2.m  genus3.canonical.m  genus3.m  torus.m  triple_torus.m  vase.canonical.m  vase.m
hyperbolic/: CMakeLists.txt  CutGraph.cpp  CutGraph.h  DisjointSet.h  DisjointSets.h  HyperbolicMap.cpp  HyperbolicMap.h  HyperbolicMesh.cpp  HyperbolicMesh.h  MeshEditor.cpp  MeshEditor.h  MeshEmbed.cpp  MeshEmbed.h  MeshGraph.h  MeshGraph.hpp  MobiusTransform.h  NullHomology.cpp  NullHomology.h  RayCollider.cpp  RayCollider.h  RicciFlow.cpp  RicciFlow.h  Tree.h  main.cpp
